@@ -2,7 +2,6 @@ package com.science.gtnl.common.command;
 
 import static com.science.gtnl.ScienceNotLeisure.network;
 
-import java.util.Arrays;
 import java.util.List;
 
 import net.minecraft.command.CommandBase;
@@ -28,7 +27,7 @@ public class CommandPlaySound extends CommandBase {
 
     @Override
     public List<String> getCommandAliases() {
-        return Arrays.asList("gtnlps");
+        return List.of("gtnlps");
     }
 
     @Override
