@@ -5,7 +5,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Random;
-import java.util.stream.Collectors;
 
 import net.minecraft.block.Block;
 import net.minecraft.entity.Entity;
@@ -187,7 +186,7 @@ public class GreenHouseSeedBucket extends GreenHouseBucket {
             .getRecipeList()
             .parallelStream()
             .filter(r -> GTUtility.areStacksEqual(r.getRecipeOutput(), seed))
-            .collect(Collectors.toList());
+            .toList();
 
         if (recipes.isEmpty()) return false;
 
